working on header

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  margin: 0;
+  padding: 0;
+  background-image: linear-gradient(
+    180deg,
+    rgba(235, 122, 255, 0.729412) 0%,
+    rgba(22, 48, 135, 0.941176) 100%
+  );
+  background-color: rgba(0, 0, 0, 0.73);
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.moreInsurance {
+  width: 100vw;
+  padding: 3% 0;
+  background-size: 100%;
+  background: #000;
+  height: 70%;
+  display: table;
+  position: relative;
 }
