--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,12 +7,21 @@
   background: #fff;
   padding: 0;
   color: #222;
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     180deg,
     rgba(235, 122, 255, 0.729412) 0%,
     rgba(22, 48, 135, 0.941176) 100%
   );
-  background-color: rgba(0, 0, 0, 0.73);
+  background-color: rgba(0, 0, 0, 0.73); */
+}
+
+.navbar-image {
+  position: absolute;
+  max-width: 100%;
+}
+
+.navbar-image > img {
+  width: -moz-available;
 }
 
 .navbar-wrapper > ul {
@@ -25,6 +34,7 @@
 
 .navbar-list {
   list-style-type: none;
+  z-index: 5;
 }
 
 ul.navbar-list > li {
